# php-glaze

./: CMakeLists.txt  LICENSE  README.md  run_tests.sh
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: _config.yml  api-reference.md  binary-formats.md  index.md  installation.md  json.md  text-formats.md
docs/_layouts/: default.html
docs/assets/css/: main.css
docs/assets/js/: main.js
src/: php_glaze.cpp
tests/: 001_functions_exist.php  002_encode_scalars.php  003_encode_string_escaping.php  004_encode_array.php  005_encode_nested.php  006_encode_object.php  007_encode_pretty_print.php  008_decode_scalars.php  009_decode_array.php  010_decode_object_assoc.php  011_decode_nested.php  012_prettify.php  013_minify.php  014_validate.php  015_round_trip.php  016_unicode.php  017_large_numbers.php  018_beve_round_trip.php  019_cbor_round_trip.php  020_msgpack_encode.php  021_toml_round_trip.php  022_yaml_round_trip.php  023_msgpack_round_trip.php
